fix: DT tooltip overlap issue (#12508)

--- a/src/modules/75-cd/components/TemplateStudio/DeploymentTemplateCanvas/DeploymentTemplateForm/components/ExecutionPanel/ExecutionPanel.module.scss
+++ b/src/modules/75-cd/components/TemplateStudio/DeploymentTemplateCanvas/DeploymentTemplateForm/components/ExecutionPanel/ExecutionPanel.module.scss
@@ -46,6 +46,9 @@
   .margin-right {
     margin-right: var(--spacing-medium) !important;
   }
+  .margin-left {
+    margin-left: var(--spacing-medium) !important;
+  }
   .addButton {
     border: 1px solid var(--primary-7) !important;
     border-radius: 4px !important;
